--- a/.gitignore
+++ b/.gitignore
@@ -281,3 +281,4 @@ $RECYCLE.BIN/
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
+autocorrect.py
