--- a/.gitignore
+++ b/.gitignore
@@ -282,3 +282,5 @@ $RECYCLE.BIN/
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
 autocorrect.py
+src/mnist
+src/raw*
